web-infras/parser/tests/fixtures/babel/core/uncategorised/463/output.txt
[SyntaxError]: unlabeled break must be inside loop or switch. (1,34)
1|x: while (true) { (function () { break; }); }
 |                                ^
